--- a/anaconda_environment/thesis.yml
+++ b/anaconda_environment/thesis.yml
@@ -12,7 +12,7 @@ dependencies:
   - backcall=0.1.0=py37_0
   - blas=1.0=mkl
   - bleach=3.1.0=py37_0
-  - ca-certificates=2019.1.23=0
+  - ca-certificates=2019.3.9=hecc5488_0
   - certifi=2019.3.9=py37_0
   - cffi=1.12.2=py37h7a1dbc1_1
   - chardet=3.0.4=py37_1
@@ -55,10 +55,11 @@ dependencies:
   - mkl_random=1.0.2=py37h343c172_0
   - nbconvert=5.4.1=py_2
   - nbformat=4.4.0=py37_0
+  - nodejs=11.11.0=0
   - numpy=1.15.4=py37h19fb1c0_0
   - numpy-base=1.15.4=py37hc3f5095_0
   - numpydoc=0.8.0=py37_0
-  - openssl=1.1.1b=he774522_1
+  - openssl=1.1.1b=hfa6e2cd_2
   - packaging=19.0=py37_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
